added Type class to allow type system to generalize for both variables and functions

--- a/todo.txt
+++ b/todo.txt
@@ -54,62 +54,29 @@ Modules after adding in IR:
 
 Remove most of ast.hpp (and ast.cpp?) since we are using c++ classes as nodes now
 
-Add __ to beginning of all internal labels in assembly
-
 Functions <-----------get functions workings (main first)
-    Maybe just let the rest of the code compile (for simplicity) <------try this
-        if T_RET_TYPE is returned (return value is saved in eax)
-            pop entire stack (get sum of all locals)
-            jmp to end label of function
 
-        let the rest of the code compile as usual, but it won't run (so scopes will end automatically)
+    AstFunDef needs to add symbol to global environment - then need to check this when functions are called
+        Convert m_envs and Symbol table to using new class Type
+        Ast nodes should return Type when translating now
+        Move/rewrite Environment/Scope methods (scope needs more methods for m_globals in Semant.hpp)
+        Add function definitions to global scope (report error if function is already defined)
+        Type check functions in AstCall (report error if function not defined/wrong types)
 
-    Problem with AstFunDef
-        return statements/labels and stack unwinding is not working
-        current thoughts: have a label at end of each function, and then
-            jump to that label when a return statement is hit
-        current problem: need to unwind the stack of locals when return statement runs,
-            but blocks could be nested inside eachother
+    Need to prepend function names with two underscores (right now, naming a function 'add' will clash with assembly)
+        have all assembly functions use __ so that we don't have label collisions
+        have labels internal to routines use __[routine_name]_[label_name] (essentially namespacing internal labels)
+            eg __printint_end:
 
-        Solution???
-            On hitting a return statement, unwind stack all the way, then jump to end
-            Would require popping stacks up the chain until we hit main function block
-            if at any point AstBlock sees a T_UNWIND_TYPE, exit loop and end scope immediately
-            jump to end
+    Function calls - AstCall
+        eval and push arguments onto stack in reverse order
+        call function
+        return value is in eax
+        add to esp to remove arguments
+        push eax onto stack 
 
-        Problem: 
-            How do we know if currently inside a block, if, while?
-            Need to unwind all three AstBlock, AstIf, AstWhile.
-            If AstDefFun gets an T_UNWIND_TYPE from one of it's nodes, need to end immediately
-
-    When translating return nodes, make sure type matches type in frame stack
-    When translating Ast nodes, need to take current frame into consideration (mainly for locals)
-    When translating AstGetSym, if parameter in current frame, need to access it using + offset (rather than - for locals)
-
-    Always inside a function:
-        Semant needs to track call frames (similar to how it tracks environments for locals)
-        When in a frame, need to keep track of arguments - all references to arguments mustA
-        so, AstRefSym MUST access frames to know if it's refering to a local or argument (which can be passed in registers or memory)
-
-    add:
-        ;start new frame
-        ;arguments should be in old frame (offset for x and  bp by +4 and +8, respectively)
-        ;   all references to arguments must be made there...
-
-        ;return
-
-    fun main() -> nil {
-        print("hello world")
-    }
-
-    fun add1(x:int, y:int) -> int {
-        return x + y
-    }
-
-    fun add2(x:int, y:int) -> nil {
-        print(x + y)
-    }
-
+    Need to compile params in AstFunDef and AstParam
+        this will affect AstGetSym and AstSetSym - they need to check parameters before locals for symbol
 
 remove r_tbl and rm_tbl and replace with bit_pattern() method
     this makes it a little robust than requiring tokens types to be in correct order
